[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Mockup/shop_mockup.png" type="Texture" id=1]
[ext_resource path="res://addons/gdyarn/yarn_runner.gd" type="Script" id=2]
[ext_resource path="res://addons/gdyarn/yarn_gui.gd" type="Script" id=3]
[ext_resource path="res://addons/gdyarn/core/variable_storage.gd" type="Script" id=4]
[ext_resource path="res://addons/gdyarn/compiled_yarn_program.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Yarn/yarn_button.gd" type="Script" id=6]
[ext_resource path="res://Assets/Fonts/Textbox.tres" type="Theme" id=7]
[ext_resource path="res://Scripts/Yarn/nav_arrow.gd" type="Script" id=8]
[ext_resource path="res://Assets/Textures/arrow.png" type="Texture" id=9]

[sub_resource type="Resource" id=1]
resource_local_to_scene = true
script = ExtResource( 5 )
_programName = "compiled_yarn_program"
_directory = "res://Shop"
_yarnPrograms = [ "res://Shop/Sally.yarn" ]

[node name="Shop" type="Node2D"]

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 240.0
margin_bottom = 160.0
texture = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="TextureRect"]
position = Vector2( 24, 16 )
scale = Vector2( 11.1306, 9.68342 )
color = Color( 0.384314, 0.164706, 0, 1 )
polygon = PoolVector2Array( 0, 0, 5, 0, 5, 5, 0, 5 )

[node name="VariableStorage" type="Node" parent="."]
script = ExtResource( 4 )

[node name="YarnDisplay" type="Control" parent="."]
margin_right = 240.0
margin_bottom = 160.0
script = ExtResource( 3 )
_yarnRunner = NodePath("../YarnRunner")
_text = NodePath("Dialogue/VBoxContainer/RichTextLabel")
_namePlate = NodePath("Dialogue/VBoxContainer/Name")
_options = [ NodePath("ShopTopMenu/HBoxContainer/Options/Option1"), NodePath("ShopTopMenu/HBoxContainer/Options/Option2"), NodePath("ShopTopMenu/HBoxContainer/Options/Option3") ]
_textSpeed = 24

[node name="Button" type="Button" parent="YarnDisplay"]
visible = false
margin_left = 8.0
margin_top = 94.0
margin_right = 189.0
margin_bottom = 139.0
script = ExtResource( 6 )

[node name="Dialogue" type="PanelContainer" parent="YarnDisplay"]
margin_left = 24.0
margin_top = 104.0
margin_right = 216.0
margin_bottom = 160.0
grow_vertical = 0
rect_min_size = Vector2( 192, 56 )
theme = ExtResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="YarnDisplay/Dialogue"]
margin_left = 8.0
margin_top = 8.0
margin_right = 184.0
margin_bottom = 48.0
size_flags_vertical = 3

[node name="Name" type="Label" parent="YarnDisplay/Dialogue/VBoxContainer"]
margin_right = 176.0
margin_bottom = 7.0
size_flags_vertical = 0
theme = ExtResource( 7 )

[node name="RichTextLabel" type="RichTextLabel" parent="YarnDisplay/Dialogue/VBoxContainer"]
margin_top = 11.0
margin_right = 176.0
margin_bottom = 40.0
rect_clip_content = false
size_flags_vertical = 3
theme = ExtResource( 7 )

[node name="ShopTopMenu" type="PanelContainer" parent="YarnDisplay"]
visible = false
margin_left = 24.0
margin_top = 16.0
margin_right = 88.0
margin_bottom = 61.0
rect_clip_content = true
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 7 )

[node name="HBoxContainer" type="HBoxContainer" parent="YarnDisplay/ShopTopMenu"]
margin_left = 8.0
margin_top = 8.0
margin_right = 56.0
margin_bottom = 37.0
custom_constants/separation = 10

[node name="MenuSelectControl" type="Control" parent="YarnDisplay/ShopTopMenu/HBoxContainer"]
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="YarnDisplay/ShopTopMenu/HBoxContainer/MenuSelectControl"]
position = Vector2( 0, 4 )
texture = ExtResource( 9 )
offset = Vector2( 2.5, -1 )

[node name="Options" type="VBoxContainer" parent="YarnDisplay/ShopTopMenu/HBoxContainer"]
margin_left = 10.0
margin_right = 38.0
margin_bottom = 29.0
size_flags_horizontal = 0
theme = ExtResource( 7 )

[node name="Option1" type="Label" parent="YarnDisplay/ShopTopMenu/HBoxContainer/Options"]
margin_right = 28.0
margin_bottom = 7.0
size_flags_vertical = 0
theme = ExtResource( 7 )
text = "Buy"

[node name="Option2" type="Label" parent="YarnDisplay/ShopTopMenu/HBoxContainer/Options"]
margin_top = 11.0
margin_right = 28.0
margin_bottom = 18.0
theme = ExtResource( 7 )
text = "Talk"

[node name="Option3" type="Label" parent="YarnDisplay/ShopTopMenu/HBoxContainer/Options"]
margin_top = 22.0
margin_right = 28.0
margin_bottom = 29.0
theme = ExtResource( 7 )
text = "Goodbye"

[node name="YarnRunner" type="Node" parent="."]
script = ExtResource( 2 )
_autoStart = true
_variableStorage = NodePath("../VariableStorage")
_compiledYarnProgram = SubResource( 1 )

[connection signal="line_started" from="YarnDisplay" to="YarnDisplay" method="_on_MenuDisplay_line_started"]
[connection signal="option_selected" from="YarnDisplay" to="YarnDisplay/ShopTopMenu/HBoxContainer/MenuSelectControl" method="_on_YarnDisplay_option_selected"]
[connection signal="options_shown" from="YarnDisplay" to="YarnDisplay/ShopTopMenu/HBoxContainer/MenuSelectControl" method="_on_YarnDisplay_options_shown"]
[connection signal="pressed" from="YarnDisplay/Button" to="YarnDisplay" method="finish_line"]
